--- a/src/MKT.Client.Outbound/appsettings.json
+++ b/src/MKT.Client.Outbound/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "CompanyImage": "Ultra",
   "AzureKeyVault": {
-    "DNS": "https://smarketsplatformdev.vault.azure.net/",
+    "DNS": "https://mktplatformdev.vault.azure.net/",
     "ClientId": "c97c4dd2-cdc2-4f94-9ad0-162b32cc1293",
     "ClientSecret": "0HL7Q~hqrGzndjE0aGR8AkQ3q7PrPLraOb9_d"
   },
@@ -27,7 +27,7 @@
       {
         "Name": "EventCollector",
         "Args": {
-          "splunkHost": "https://splunk.smarkets.com.br",
+          "splunkHost": "https://splunk.mkt.com.br",
           "eventCollectorToken": ""
         }
       }
