--- a/src/MKT.Client.Outbound/MKT.Client.Outbound.csproj
+++ b/src/MKT.Client.Outbound/MKT.Client.Outbound.csproj
@@ -20,6 +20,14 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.21" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
@@ -38,6 +46,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MKT.Integration.Application\MKT.Integration.Application.csproj" />
     <ProjectReference Include="..\MKT.Integration.Infra\MKT.Integration.Infra.csproj" />
+    <ProjectReference Include="..\Shared\src\Shared.Api\Shared.Api.csproj" />
   </ItemGroup>
 
 </Project>
