--- a/src/MKT.Integration.Domain/MKT.Integration.Domain.csproj
+++ b/src/MKT.Integration.Domain/MKT.Integration.Domain.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AggregateModels\" />
+    <ProjectReference Include="..\Shared\src\Shared.Domain\Shared.Domain.csproj" />
+    <ProjectReference Include="..\Shared\src\Shared.Infra\Shared.Infra.csproj" />
+    <ProjectReference Include="..\Shared\src\Shared.Util\Shared.Util.csproj" />
   </ItemGroup>
 
 </Project>
